--- a/mylibrary/src/main/res/layout/common_photo_images_full_size_item.xml
+++ b/mylibrary/src/main/res/layout/common_photo_images_full_size_item.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-<ScrollView
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:id="@+id/scrollView">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<!--<ScrollView-->
+    <!--android:orientation="vertical" android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content" android:id="@+id/scrollView">-->
 
-    <lsw.utility.Image.SquareImageView
+    <ImageView
+        android:scaleType="fitCenter"
         android:layout_gravity="top|center_horizontal"
         android:id="@+id/lp_img_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_height="match_parent"/>
 
-</ScrollView>
+
+
+<!--</ScrollView>-->
     <RelativeLayout
         android:id="@+id/lp_layout_check"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:layout_alignTop="@id/scrollView"
+        android:layout_alignTop="@id/lp_img_image"
         android:layout_centerHorizontal="true">
 
         <ImageView
