--- a/lunar_calendar/src/main/res/layout/activity_month.xml
+++ b/lunar_calendar/src/main/res/layout/activity_month.xml
@@ -58,11 +58,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <LinearLayout android:layout_weight="1" android:gravity="center"
-            android:layout_width="0dp"
+        <LinearLayout  android:gravity="center"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <TextView android:textColor="@color/gray_medium"
+                android:gravity="center"
+                android:text="年"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
             <TextView android:layout_gravity="center"
                 android:id="@+id/tvEraYear"
                 android:layout_width="wrap_content"
@@ -70,6 +75,11 @@
                 android:ems="1"
                 android:text="乙未"
                 android:textSize="30dp" />
+            <TextView android:textColor="@color/gray_medium"
+                android:gravity="center"
+                android:text="月"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
 
             <TextView android:layout_gravity="center"
                 android:id="@+id/tvEraMonth"
@@ -78,6 +88,11 @@
                 android:ems="1"
                 android:text="癸未"
                 android:textSize="30dp" />
+            <TextView android:textColor="@color/gray_medium"
+                android:gravity="center"
+                android:text="日"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
 
             <TextView android:layout_gravity="center"
                 android:id="@+id/tvEraDay"
@@ -86,6 +101,11 @@
                 android:ems="1"
                 android:text="壬寅"
                 android:textSize="30dp" />
+            <TextView android:textColor="@color/gray_medium"
+                android:gravity="center"
+                android:text="时"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
 
             <TextView android:layout_gravity="center"
                 android:id="@+id/tvEraHour"
@@ -96,8 +116,8 @@
                 android:textSize="30dp" />
         </LinearLayout>
 
-        <LinearLayout android:layout_weight="1"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
