--- a/liuyao/src/main/res/layout/hexagram_list_menu.xml
+++ b/liuyao/src/main/res/layout/hexagram_list_menu.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="@color/white">
-    <ExpandableListView android:layout_weight="1"
+    <ExpandableListView android:layout_alignParentTop="true"
+        android:layout_above="@+id/bottomFunctions"
         android:id="@+id/lvMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ExpandableListView>
-<LinearLayout
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:paddingTop="10dp"
-    android:layout_weight="2"
+<LinearLayout android:layout_alignParentBottom="true" android:id="@+id/bottomFunctions"
+    android:layout_margin="10dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -27,4 +25,4 @@
         android:layout_height="wrap_content" />
 
 </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
