周末用红色显示

--- a/lunar_calendar/src/main/res/values/day_textview_attrs.xml
+++ b/lunar_calendar/src/main/res/values/day_textview_attrs.xml
@@ -4,5 +4,6 @@
         <attr name="IsCurrentMonth" format="boolean"/>
         <attr name="IsCurrentSelected" format="boolean"/>
         <attr name="IsToday" format="boolean"/>
+        <attr name="IsWeekend" format="boolean"/>
     </declare-styleable>
 </resources>
