--- a/lunar_calendar/src/main/res/layout/menu_left.xml
+++ b/lunar_calendar/src/main/res/layout/menu_left.xml
@@ -5,30 +5,14 @@
     <LinearLayout android:id="@+id/topFunctions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:orientation="horizontal">
-        <TextView android:text="复 位" android:id="@+id/tvResetImages"
-            android:gravity="center" android:layout_margin="3dp"
-            android:layout_width="match_parent" android:textColor="@color/white"
-            android:layout_height="match_parent"  android:background="@drawable/button_flatten" />
+
     </LinearLayout>
     <LinearLayout android:id="@+id/llcontent" android:orientation="vertical"
         android:layout_above="@+id/bottomFunctions"
         android:layout_below="@+id/topFunctions"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-<HorizontalScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-        <FrameLayout android:id="@+id/fl_Image_Select" android:background="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        <FrameLayout android:id="@+id/fl_Price_List" android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-</HorizontalScrollView>
+
     </LinearLayout>
     <LinearLayout android:id="@+id/bottomFunctions" android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -40,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_margin="3dp"
             android:layout_height="wrap_content"
-            android:text="价格查询"
+            android:text=""
             android:textColor="@color/white"
             android:background="@drawable/button_flatten"/>
         <TextView
@@ -50,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_margin="3dp"
             android:layout_height="wrap_content"
-            android:text="导出当前卦例图片"
+            android:text=""
             android:textColor="@color/white"
             android:background="@drawable/button_flatten"/>
     </LinearLayout>
