--- a/lunar_calendar/src/main/res/layout/menu_left.xml
+++ b/lunar_calendar/src/main/res/layout/menu_left.xml
@@ -12,7 +12,9 @@
         android:layout_below="@+id/topFunctions"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+        <FrameLayout android:id="@+id/fl_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
     <LinearLayout android:id="@+id/bottomFunctions" android:orientation="horizontal"
         android:layout_width="match_parent"
