--- a/lunar_calendar/src/main/res/layout/menu_left.xml
+++ b/lunar_calendar/src/main/res/layout/menu_left.xml
@@ -12,7 +12,10 @@
         android:layout_below="@+id/topFunctions"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <FrameLayout android:id="@+id/fl_list"
+        <FrameLayout android:id="@+id/fl_list" android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <FrameLayout android:id="@+id/fl_list_birthday" android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
@@ -21,22 +24,22 @@
         android:layout_height="wrap_content" android:layout_alignParentBottom="true">
         <TextView
             android:layout_weight="1"
-            android:id="@+id/tvPrice"
+            android:id="@+id/tvYangLiBirthday"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_margin="3dp"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="本月阳历生日"
             android:textColor="@color/white"
             android:background="@drawable/button_flatten"/>
         <TextView
             android:layout_weight="1"
-            android:id="@+id/tvCapture"
+            android:id="@+id/tvYinLiBirthday"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_margin="3dp"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="本月阴历生日"
             android:textColor="@color/white"
             android:background="@drawable/button_flatten"/>
     </LinearLayout>
