--- a/lunar_calendar/src/main/res/layout/fragment_monthly_birthday.xml
+++ b/lunar_calendar/src/main/res/layout/fragment_monthly_birthday.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:text="当日生日-阳历" android:gravity="center"
+        android:text="生日" android:gravity="center"
         android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:paddingBottom="3dp" />
