--- a/lunar_calendar/src/main/res/layout/fragment_monthly_birthday.xml
+++ b/lunar_calendar/src/main/res/layout/fragment_monthly_birthday.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+    <TextView android:background="@color/gray_medium" android:textColor="@color/white"
         android:text="生日" android:gravity="center"
         android:paddingTop="5dp"
         android:layout_width="match_parent"
