--- a/lunar_calendar/src/main/res/layout/activity_month.xml
+++ b/lunar_calendar/src/main/res/layout/activity_month.xml
@@ -23,6 +23,7 @@
             android:background="@drawable/button_flatten"
             android:gravity="center"
             android:text="2015年7月25日 19:50"
+            android:textColor="@color/white"
             android:textSize="20dp" android:layout_marginBottom="10dp"/>
 
         <TextView
@@ -35,6 +36,7 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="二零一五年六月十一"
+            android:textColor="@color/white"
             android:textSize="20dp" />
 
     </LinearLayout>
