--- a/lunar_calendar/src/main/res/menu/menu_month.xml
+++ b/lunar_calendar/src/main/res/menu/menu_month.xml
@@ -3,6 +3,8 @@
 
     <item android:id="@+id/menuSetting" android:title="设置"
         android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/menuMemory" android:title="事件列表"
+        android:orderInCategory="100" android:showAsAction="never" />
     <item android:id="@+id/menuContact" android:title="联系作者"
         android:orderInCategory="100" android:showAsAction="never" />
     <item android:id="@+id/menuToday" android:title="今天"
