--- a/lunar_calendar/src/main/res/layout/activity_setting.xml
+++ b/lunar_calendar/src/main/res/layout/activity_setting.xml
@@ -6,6 +6,6 @@
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="周六为每月第一天"
+        android:text="周日为每月第一天"
         android:id="@+id/swMonthFirstDay" />
 </LinearLayout>
