--- a/lunar_calendar/src/main/res/layout/menu_left.xml
+++ b/lunar_calendar/src/main/res/layout/menu_left.xml
@@ -18,6 +18,9 @@
         <FrameLayout android:id="@+id/fl_list_birthday" android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+        <FrameLayout android:id="@+id/fl_list_tip" android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
     <LinearLayout android:id="@+id/bottomFunctions" android:orientation="horizontal"
         android:layout_width="match_parent"
