--- a/lunar_calendar/src/main/res/layout/fragment_daily_list_hexagram.xml
+++ b/lunar_calendar/src/main/res/layout/fragment_daily_list_hexagram.xml
@@ -3,12 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView android:background="@color/gray_medium" android:textColor="@color/white"
-        android:text="当日卦例" android:gravity="center"
+        android:text="卦例" android:gravity="center"
         android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:paddingBottom="3dp" />
 
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/gray_light"></View>
 <ListView android:id="@+id/lvHexagrams"
     android:layout_width="match_parent"
     android:layout_height="match_parent"></ListView>
