--- a/lunar_calendar/src/main/res/layout/fragment_memory_list.xml
+++ b/lunar_calendar/src/main/res/layout/fragment_memory_list.xml
@@ -2,9 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView android:id="@+id/tvTitle" android:background="@color/gray_medium" android:textColor="@color/white"
+        android:text="事件" android:gravity="center"
+        android:paddingTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:paddingBottom="3dp" android:visibility="gone" />
     <LinearLayout android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <TextView
+            android:layout_weight="1"
+            android:id="@+id/tvAll"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_margin="3dp"
+            android:layout_height="wrap_content"
+            android:text="全部"
+            android:textColor="@color/white"
+            android:background="@drawable/button_flatten"/>
         <TextView
             android:layout_weight="1"
             android:id="@+id/tvToday"
